# ray-test

./: .env.example  .gitignore  Dockerfile  README.md  app.py  app_lance.py  config.py  convergence.py  demo.py  docker-compose.yml  launch_serve.py  locks.py  processors.py  pyproject.toml  server.py  storage.py  temporal_workflow.py  test_load.py  user_data.proto  user_data_pb2.py  workflow.yaml
workflows/: github_workflow.yaml  linkedin_workflow.yaml
